--- a/styles/composition.css
+++ b/styles/composition.css
@@ -115,7 +115,10 @@ https://www.w3schools.com/w3css/4/w3.css
 .w3-padding-32{padding-top:32px!important;padding-bottom:32px!important}.w3-padding-48{padding-top:48px!important;padding-bottom:48px!important}
 .w3-padding-64{padding-top:64px!important;padding-bottom:64px!important}
 .w3-left{float:left!important}.w3-right{float:right!important}
-.w3-button:hover{color:#000!important;background-color:#ccc!important}
+@media (hover: hover) {
+    .w3-button:hover{color:#000!important;background-color:#ccc!important}
+}
+.w3-button:active{color:#000!important;background-color:#ccc!important}
 .w3-transparent,.w3-hover-none:hover{background-color:transparent!important}
 .w3-hover-none:hover{box-shadow:none!important}
 /* Colors */
@@ -241,7 +244,7 @@ div[traitBox] {
 div[skillBox] {
     display: flex;
     flex-direction: column;
-    text-align: column;
+    text-align: center;
 }
 
 div[equipementBox] {
@@ -301,19 +304,9 @@ div[trinketBox] {
 }
 
 button {
-    font-weight: bold;
     font-size: 1.2em;
-    border-radius: 0%;
-    background-color: #AAAAAA;
-    border: 3px solid #777777;
-    text-align: center;
 }
 
-button:hover {
-    border-radius: 0%;
-    background-color: #AAFFAA;
-    border: 3px solid #77BB77;
-}
 
 
 
@@ -350,8 +343,44 @@ button:hover {
         font-size: 2.5em;;
     }
 
+    div[class^="gw2a--17V11"] {
+        font-size: 1.05em;
+    }
+    span[class^="gw2a--1qoBZ"] {
+        font-size: 1.0em;
+    }
+    div[class^="gw2a--35pJR"] {
+        font-size: 1.0em;
+    }
+
     div[equipementBox] {
         padding-left: 0%;
         padding-right: 0%;
+    }
+}
+
+@media only screen and (max-device-width: 450px) {
+    button {
+        font-size: 2.9em;
+    }
+
+    div[build] {
+        font-size: 2.7em;
+    }
+
+    div[char] {
+        font-size: 2.7em;;
+    }
+
+    div[class^="gw2a--17V11"] {
+        font-size: 1.6em;
+    }
+
+    div[class^="gw2a--35pJR"] {
+        font-size: 1.3em;
+    }
+
+    span[class^="gw2a--1qoBZ"] {
+        font-size: 1.3em;
     }
 }
