--- a/styles/header.css
+++ b/styles/header.css
@@ -18,9 +18,17 @@
     text-decoration: none;
 }
 
-.container a:hover, .dropdown:hover .dropbtn {
+@media (hover: hover) {
+    .container a:hover, .dropdown:hover .dropbtn {
+        background-color: red;
+    }
+}
+
+.container a:active, .dropdown:active .dropbtn {
     background-color: red;
 }
+
+
 
 @media only screen and (max-width: 1000px) {
     .container {
